--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <h2>And how are you</h2>
 
     <!--script  -->
     <script src="script.js"></script>
